grammar.js
        source_file: $ => seq(
            optional($.features_directive),
            optional(choice($.package_declaration, $.macro_package_declaration)),
            repeat($.import_list),
            repeat(seq(optional(token(';')), choice(choice(
                    $.variable_declaration, $.function_definition, $.operator_function_definition,
                    $.class_definition, $.interface_definition, $.struct_definition, $.enum_definition,
                    $.type_alias, $.extend_definition, $.foreign_declaration, $.macro_definition,
                    $.decorated_declaration, $.macro_expression,
                ), $.main_definition))),
            optional(token(';')),
        ),

        package_declaration: $ => seq(
            optional($.modifiers),
            TOKENS.PACKAGE, field('package_name', $._name), terminator($)
        ),
        _import_packages: $ => choice(
            prec.right(-3, field('package_name', $._name)),
            prec.right(-2, $.package_full),
            prec.right(-1, $.package_alias),
        ),
        import_list: $ => seq(
            optional(repeat1($.macro_call)),
            optional($.modifiers),
            TOKENS.IMPORT,
            choice(
                $._import_packages,
                $.package_group,
                $.sub_group_of_package,
            ),
            terminator($)
        ),
        package_alias: $ => seq(
            field('package_name', $._name),
            TOKENS.AS,
            field('alias', reserved('id', $.identifier)),
        ),
        package_full: $ => seq(field('package_name', $._name), '.', token('*')),
        package_group: $ => seq(
            '{',
            seq($._import_packages, repeat(seq(',', $._import_packages))),
            optional(','),
            '}',
        ),
        sub_group_of_package: $ => seq(field('package_name', $._name), '.', $.package_group),

        main_definition: $ => seq(
            TOKENS.MAIN, $.parameter_list, optional($.return_type),
            $.block
        ),

// ===== declarations =====
        modifiers: $ => prec.left(repeat1(choice(
            ...MODIFIER_TOKENS.map(t => reserved('modifier', t)),
            TOKENS.STATIC, TOKENS.CONST, TOKENS.MUT, TOKENS.UNSAFE,
        ))),
        _modifiers_var: $ => alias(prec.left(repeat1(choice(
            ...MODIFIER_TOKENS.map(t => reserved('modifier', t)),
            TOKENS.STATIC, TOKENS.MUT, TOKENS.UNSAFE,
        ))), $.modifiers),
        decorated_declaration: $ => prec.dynamic(1, prec.right(seq(
            repeat1($.macro_call),
            choice(
                $.class_definition, $.function_definition, $.struct_definition,
                $.interface_definition, $.enum_definition, $.type_alias, $.extend_definition,
                $.foreign_declaration, $.variable_declaration, $.operator_function_definition,
                $.property_definition, $.init, $.static_init, $.finalizer, $.primary_init,
            )
        ))),

        macro_definition: $ => seq(
            optional($.modifiers),
            TOKENS.MACRO, field('name', $._macro_name),
            field('parameters', seq('(', optional(commaSep1Trailing($.macro_parameter)), ')')),
            optional(field('return_type', $.return_type)),
            choice(
                seq('=', field('body', $._expression)),
                field('body', $.block)
            )
        ),

        macro_parameter: $ => seq(
            field('name', reserved('id', $.identifier)),
            optional('!'),
            ':',
            field('type', $._type),
            optional(seq('=', field('default_value', $._expression)))
        ),
        _macro_name: $ => alias(prec.right(seq(repeat(seq(reserved('id', $.identifier), '.')), reserved('id', $.identifier))), $.macro_name),


        class_definition: $ => seq(typeHeader($, TOKENS.CLASS, $._class_name), field('body', $.declaration_body)),
        enum_definition: $ => seq(typeHeader($, TOKENS.ENUM, alias(reserved('id', $.identifier), $.enum_name)), field('body', $.enum_body)),
        enum_body: $ => seq(
            '{', optional('|'),
            sep1(field('enum_constant', choice(
                    seq(reserved('id', $.identifier), optional(seq('(', commaSep1Trailing($._type), ')'))),
                    token('...')
                )), '|'),
            optional($._declaration_list),
            '}'
        ),

        type_alias: $ => seq(
            optional($.modifiers),
            TOKENS.TYPE,
            field('name', alias(reserved('id', $.identifier), $.type_alias_name)),
            optional($.type_parameters),
            '=',
            field('type', $._type)
        ),

        foreign_declaration: $ => seq(
            TOKENS.FOREIGN,
            choice(
                field('body', $.declaration_body),
                choice(
                        $.class_definition,
                        $.interface_definition,
                        $.function_definition,
                        $.variable_declaration
                    )
            )
        ),

        _declaration_list: $ => repeat1(seq(
            optional(repeat1(token(';'))),
            choice(
                    $.variable_declaration,
                    $.function_definition,
                    $.operator_function_definition,
                    $.property_definition,
                    $.init,
                    $.static_init,
                    $.primary_init,
                    $.finalizer,
                    $.decorated_declaration,
                    $.macro_expression,
                ),
        )),

        declaration_body: $ => seq(
            '{',
            optional($._declaration_list),
            '}'
        ),
        _class_name: $ => alias(reserved('id', $.identifier), $.class_name),
        function_definition: $ => prec.right(seq(
            optional($.modifiers),
            TOKENS.FUNC,
            field('name', alias(reserved('id', $.identifier), $.func_name)),
            optional($.type_parameters),
            field('parameters', $.parameter_list),
            optional(field('return_type', $.return_type)),
            optional($.generic_constraints),
            optional(field('body', $.block))
        )),
        operator_function_definition: $ => seq(
            optional($.modifiers), TOKENS.OPERATOR, optional(TOKENS.CONST), TOKENS.FUNC,
            field('name', alias(choice(
                token(seq('[', ']')), token(seq('(', ')')),
                token('!'), token('+'), token('-'), token('**'), token('*'), token('/'), token('%'),
                token('<<'), token('>>'), token('<'), token('>'), token('<='), token('>='),
                token('=='), token('!='), token('&'), token('^'), token('|'),
            ), $.operator)),
            optional($.type_parameters), field('parameters', $.parameter_list),
            optional(field('return_type', $.return_type)), optional($.generic_constraints),
            optional(field('body', $.block)),
        ),

        property_definition: $ => seq(
            optional($.modifiers),
            TOKENS.PROP, field('name', alias(reserved('id', $.identifier), $.property_name)), ':', field('type', $._type),
            optional(seq(
                '{',
                optional(field('getter', seq(alias(reserved('none', $.identifier), $.getter_keyword), '(', ')', $.block))),
                optional(field('setter', seq(alias(reserved('none', $.identifier), $.setter_keyword), '(', reserved('none', $.identifier), ')', $.block))),
                '}',
            )),
        ),

        init: $ => prec(PREC.INIT, seq(
            optional($.modifiers),
            TOKENS.INIT, field('parameters', $.parameter_list),
            optional(field('body', $.block))
        )),
        primary_init: $ => seq(
            optional($.modifiers),
            $._class_name, $.primary_init_param_list,
            '{',
            optional(repeat(seq(
                choice(
                    $._expression,
                    $.variable_declaration,
                    $.function_definition,
                ),
                optional(terminator($))),
            )),
            '}'
        ),
        primary_init_param_list: $ => seq('(',
            optional(commaSep1Trailing(choice(
                $.parameter,
                $.named_parameter,
                $.unnamed_member_param,
                $.named_member_param,
            ))),
            ')',
        ),
        named_member_param: $ => seq(
            optional($.modifiers),
            choice(TOKENS.LET, TOKENS.VAR),
            $.named_parameter
        ),

        return_type: $ => seq(':', field('type', $._type)),

        block: $ => seq(
            '{',
            optional($._expression_or_declarations),
            '}',
        ),
        _expression_or_declarations: $ => repeat1(seq(
            choice(
                alias($._local_variable_declaration, $.variable_declaration),
                $.function_definition,
                $._expression
            ),
            repeat(terminator($)),
        )),

        _var_decl_tail: $ => seq(
            choice(TOKENS.LET, TOKENS.VAR, TOKENS.CONST),
            field('name', alias($._pattern_irrefutable, $.variable_name)),
            choice(
                seq(':', field('type', $._type), optional(seq('=', field("initializer", $._expression)))),
                seq('=', field("initializer", $._expression))
            ),
        ),
        variable_declaration: $ => seq(
            optional($._modifiers_var),
            $._var_decl_tail,
        ),
// ===== parameters & calls =====
        parameter_list: $ => seq(
            '(',
            optional(choice(
                seq(sep1($.parameter, ','), optional(seq(',', sep1($.named_parameter, ',')))),
                sep1($.named_parameter, ','),
            )),
            optional($.ellipsis_parameter),
            optional(','),
            ')',
        ),

        parameter: $ => seq(
            optional(repeat1($.macro_call)),
            choice(
                seq(field('para_name', choice(reserved('id', $.identifier), '_')), ':', field('type', $._type)),
                seq('(', $.parameter, ')'),
                seq('(', $.named_parameter, ')'),
            )
        ),
        named_parameter: $ => seq(
            optional(repeat1($.macro_call)),
            seq(field('para_name', alias(choice(reserved('id', $.identifier), ...MODIFIER_TOKENS), $.identifier)), '!'),
            ':',
            field('type', $._type),
            optional(seq('=', field('default_value', $._expression)))
        ),
        unnamed_member_param: $ => seq(
            optional($.modifiers),
            choice(TOKENS.LET, TOKENS.VAR),
            field('para_name', choice(reserved('id', $.identifier), '_')),
            ':',
            field('type', $._type),
            optional(seq('=', field('default_value', $._expression)))
        ),

        call_suffix: $ => seq(
            '(',
            optional(commaSep1Trailing(choice(
                seq(reserved('id', $.identifier), ':', $._expression),
                $._expression,
                seq(TOKENS.INOUT, optional(seq($._expression, '.')), reserved('id', $.identifier))
            ))),
            $._call_tail
        ),
        // The "whose lambda?" fork, isolated so the conflict is named after it.
        _call_tail: $ => seq(')', optional($.lambda_expression)),
// ===== statements & expressions =====
        _primary_expression: $ => choice(
            $._literal,
            $.array_literal,
            alias(choice(reserved('id', $.identifier), ...MODIFIER_TOKENS), $.identifier),
            $.parenthesized_expression,
            $.tuple_expression,
            $.range_expression,
            $.lambda_expression,
            $.jump_expression,
            $.synchronized_expression,
            $.spawn_expression,
            $.perform_expression,
            $.resume_expression,
            $.unsafe_expression,
            $.this_super_expression,
            $.if_expression,
            $.match_expression,
            choice($.for_in_expression, $.while_expression, $.do_while_expression),
            $.try_expression,
            $.quote_expression,
            $.macro_expression,
            $._dollar_identifier,
            seq(
                    token('$('),
                    $._expression,
                    ')',
                ),
        ),

        _expression: $ => choice(
            $.postfix_expression,
            $.unary_expression,
            $.binary_expression,
            $.is_expression,
            $.as_expression,
            $.assignment_expression,
        ),

        jump_expression: $ => choice(
            prec.right(seq(TOKENS.THROW, $._expression)),
            prec.right(seq(TOKENS.RETURN, optional($._expression))),
            TOKENS.CONTINUE,
            TOKENS.BREAK,
        ),

        _type: $ => choice(
            $.arrow_type, $.tuple_type, $.prefix_type,
            alias(TOKENS.INT8, $.Int8), alias(TOKENS.INT16, $.Int16), alias(TOKENS.INT32, $.Int32), alias(TOKENS.INT64, $.Int64), alias(TOKENS.INTNATIVE, $.IntNative),
            alias(TOKENS.UINT8, $.UInt8), alias(TOKENS.UINT16, $.UInt16), alias(TOKENS.UINT32, $.UInt32), alias(TOKENS.UINT64, $.UInt64), alias(TOKENS.UINTNATIVE, $.UIntNative),
            alias(TOKENS.FLOAT16, $.Float16), alias(TOKENS.FLOAT32, $.Float32), alias(TOKENS.FLOAT64, $.Float64),
            alias(token('String'), $.String), alias(TOKENS.RUNE, $.Rune), alias(TOKENS.BOOL, $.Bool),
            alias(TOKENS.NOTHING, $.Nothing), alias(TOKENS.UNIT, $.Unit), alias(TOKENS.THISTYPE, $.Thistype),
            $.user_type, $.generic_type,
            $.const_generic,
        ),

        user_type: $ => prec.right(seq($._name, optional($.type_arguments))),
        generic_type: $ => seq(choice(token('Array'), token('Range')), $.type_arguments),

        arrow_type: $ => seq('(', optional($._named_or_type_list), ')', token('->'), field('type', $._type)),

        type_arguments: $ => seq('<', $._type_list, '>'),
        // Expression world: _generic_lt is a ZERO-WIDTH decision token (Swift
        // follow-set rule, scanner.c); hidden + aliased so both worlds surface
        // ONE node type: type_arguments.
        _generic_arguments: $ => seq($._generic_lt, '<', $._type_list, '>'),

        _type_list: $ => commaSep1Trailing($._type),

        _named_or_type_list: $ => commaSep1Trailing(choice(
            seq(reserved('id', $.identifier), ':', $._type),
            $._type
        )),

        _name: $ => choice(
            reserved('id', $.identifier),
            $.scoped_identifier,
        ),        scoped_identifier: $ => seq(
            field("scope", $._name), '.', field('name', reserved('id', $.identifier))),
        postfix_expression: $ => choice(
            $._primary_expression,
            prec.right(PREC.MEMBER, seq(
                field('base', $.postfix_expression),
                field('suffix', choice(
                        prec(PREC.MEMBER, $.field_access), prec(PREC.MEMBER, $.scope_resolution),
                        prec(PREC.ARRAY, $.index_access), prec(PREC.POSTFIX, $.quest_access),
                        prec(PREC.PARENS, $.call_suffix), prec(PREC.POSTFIX, $.inc_or_dec),
                        alias($._generic_arguments, $.type_arguments),
                        $.lambda_expression,
                    )),
            )),
        ),

// ===== literals & lexicals =====
        integer_literal: _ => token(seq(
            choice(
                seq('0', choice('x', 'X'), hexDigits),
                seq('0', choice('o', 'O'), seq(/[0-7]/, repeat(choice('_', /[0-7]/)))),
                seq('0', choice('b', 'B'), seq(/[01]/, repeat(choice('_', /[01]/)))),
                decimalLiteral,
            ),
            optional(/_?[iu](8|16|32|64)/),
        )),
